[tool.poetry]
name = "unit-tests"
version = "0.1.0"
description = ""
authors = ["kaiquebellmont <kaiquebellmont@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
pytest = "^7.4.3"
uvicorn = "^0.23.2"
faker = "^19.12.0"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
